# markdown-op

./: .gitignore  Cargo.toml  README.md  test.sh
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  watcher.rs  websocket.rs
shared/: Cargo.toml
shared/src/: lib.rs
