[workspace]
resolver = "2"

members = [
    "server",
    "client",
    "shared",
]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
notify = "6.1"
lazy_static = "1.4"
similar = "2.2"
url = "2.4"
thiserror = "1.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[profile.dev]
opt-level = 0
debug = true 