[package]
name = "client"
version = "0.1.0"
edition = "2021"
description = "WebSocket client that maintains a synchronized copy of a watched file"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
rand = "0.8"
shared = { path = "../shared" }
