[package]
name = "server"
version = "0.1.0"
edition = "2021"
description = "WebSocket server that watches files and broadcasts content"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
notify = { workspace = true }
futures-util = { workspace = true }
shared = { path = "../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
lazy_static = { workspace = true }
anyhow = { workspace = true }
